// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper Component with default theme should render correctly 1`] = `
.c0 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #fff;
  overflow-x: scroll;
  overflow-y: hidden;
  direction: rtl;
  border-width: 3px 0;
  border-style: solid none;
  border-color: rgba(0,108,174,1);
  padding: 7px;
  -webkit-animation: kTETKv 0.6s linear;
  animation: kTETKv 0.6s linear;
}

@media (min-width:48em) {
  .c0 {
    display: initial;
    overflow-x: hidden;
    overflow-y: scroll;
    direction: ltr;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`Wrapper Component with hkm theme should render correctly 1`] = `
.c0 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #fff;
  overflow-x: scroll;
  overflow-y: hidden;
  direction: rtl;
  border-width: 3px 0;
  border-style: solid none;
  border-color: #fabfc0;
  padding: 7px;
  -webkit-animation: kTETKv 0.6s linear;
  animation: kTETKv 0.6s linear;
}

@media (min-width:48em) {
  .c0 {
    display: initial;
    overflow-x: hidden;
    overflow-y: scroll;
    direction: ltr;
  }
}

<div
  className="c0"
>
  Content
</div>
`;
